# project-zephyrine

./: .conda_executable_path_cache_main_env.txt  .custom_llama_cpp_installed_v1  .gitignore  .gitmodules  .melo_tts_installed_v1  .stignore  AutomatedAuditNotes.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  commit_message.txt  index.js  launcher.py  package.json  requirements.txt  run.ps1  run.sh  sync.ffs_lock  watchdog_challenge.txt
ZephyWatchtower/: Watchdog_Thread1  Watchdog_Thread1.go  (+1 more)
systemCore/UIEngine/FrontFaceInteractivityZephyrine/: CMakeLists.txt  MissingPackages.txt  boilerplateinstruction.txt
systemCore/UIEngine/FrontFaceInteractivityZephyrine/src/: CMakeLists.txt  cJSON.c  cJSON.h  main.c  mode_chat.c  mode_chat.h  mode_fcs.c  mode_fcs.h  network.c  network.h
systemCore/adelaideEngineMain/: CMakeCache.txt  CMakeLists.txt  Makefile  adelaideEngineMain.adb  dummy  dummy.cpp  main.adb  main.cpp  main.gpr  main_adAlEngine.cpp
systemCore/adelaideEngineMain/DummyZephy/: StrongType.hpp  cmake_install.cmake  dummy.cpp  my_crow_app  my_program
systemCore/adelaideEngineMain/legacyAlpacaElectronCodeJS/: adelaideEngineMain.js
systemCore/adelaideEngineMain/reverseEngineeringAssets/ollama_mimickery_reverse_engineering/: api_call_mimickery_documentation_by_jmorganca.md
systemCore/engineMain/: AdelaideAlbertCortex.py  BranchPredictor_TODO_Arch.md  CMakeLists.txt  CortexConfiguration.py  InterpreterManager.cpp  InterpreterManager.h  Original README.md  VectorCompute_Provider.py  agent.py  agent_system_prompt.txt  ai_provider.py  alembic.ini  app.py  audioProcessorCortex_backbone_provider.py  audio_thread_worker.py  audio_worker.py  compile_command_test.sh  config.py  cortex_backbone_provider.py  create_and_run_proxy.sh  database.py  dctd_branchpredictor.py  dctd_scheduler.py  engine.py  engine.py.orig  engine.py.rej  engineInteraction.db  engine_fixes.patch  experimentalpythoninference.py  file_indexer.py  imagination_worker.py  interaction_indexer.py  llama_infer.py  llama_worker.py  main  main.cpp  network_internet_knowledge_fetcher.py  priority_lock.py  procedural_adaptivesystem_agent.py  readmeCompile.txt  (+8 more)
systemCore/engineMain/ChatterboxTTS_subengine/: README.md  example_for_mac.py  example_tts.py  example_tty.py  example_vc.py  gradio_tts_app.py  gradio_vc_app.py  voice_conversion.py
systemCore/engineMain/ChatterboxTTS_subengine/src/chatterbox/: tts.py
systemCore/engineMain/ChatterboxTTS_subengine/src/chatterbox_tts.egg-info/: PKG-INFO  SOURCES.txt
systemCore/engineMain/LaTeX_OCR-SubEngine/: setup.py
systemCore/engineMain/MeloAudioTTS_SubEngine/: README.md
systemCore/engineMain/StellaIcarus/: basic_math_hook.py  flight_core_ultimate.cpp  flight_cx3_core.cpp  fmc_servo_manual_hook_test.py  hello_trickshot_core.cpp  readme.md  stella_math_core.cpp  trickshot_bench_core.cpp  trickshot_simple_flight_computer.py  trickshot_stellaicarus_benchmark_simplearitmatic.py
systemCore/engineMain/StellaIcarus/avionics_daemon/: alire.toml
systemCore/engineMain/StellaIcarus/avionics_daemon/src/: avionics_types.ads  main.adb
systemCore/engineMain/StellaIcarus/avionics_zephy_fmc_cpp_microcontroller_io_fmc_bridge_mk1/: avionics_zephy_fmc_cpp_microcontroller_io_fmc_bridge_mk1.gpr  avionics_zephy_fmc_cpp_microcontroller_io_fmc_bridge_mk1.gpr.bak  codeinject.sh
systemCore/engineMain/StellaIcarus/stella_greeting/: alire.toml  stella_greeting.gpr
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/: attemptnonnvidiaexclusivefinetunequantized2.py  embed_test.py  gptqinference.py  kraeplinpaulintest.sh  llama.py  ollamamodelDeobfuscation.py  probe_gguf.py  test_lmexec.py  testvlm.py  tts_test_v2.py
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/ASIC_TensorProcessor_Test/: AppleNeuralEngine.py  AppleNeuralEngine_InferenceTest.py  AppleNeuralNetwork_CheckFlight.py
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/LaTeX-OCR/: setup.py
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/StressTest/: arithmatic_latencytest  arithmatic_latencytest.c  hybrid_arithmatic.py  kraepelinpaulinstresstest.go
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/ada_courseRE/: readme.md
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/backup/: engine.py
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/oldEngineBuild/: engine.py
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/projectFTL_stellaIcarusExampleLabTest/: testshot0.py
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/projectFTL_stellaIcarusTrickshotExampleLabTest/: fastvector.cpp  testshot1.py
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/systemMonitor/: testMonitor.py
systemCore/engineMain/_excludefromRuntime_reverseEngineeringAssets/xmppTest/: package.json  send_message.js  send_message.py
systemCore/engineMain/alembic/: env.py  script.py.mako
systemCore/engineMain/alembic/versions/: a47e83b5c732_auto_generated_initial_schema.py
systemCore/engineMain/branchpredictor_dctd/: DCTD_Mock_Summary.md  Final_Summary.md  Priority_System_Clarification.md  QPU_Provider_Implementation.md  Qiskit_Provider_Implementation.md  Vector_Generation_Implementation.md  branchpredictor_dctd.gpr  branchpredictor_dctd.md
systemCore/engineMain/branchpredictor_dctd/src/: qrack_api.ads  vector_prediction_entaglement.py
systemCore/engineMain/chroma_interaction_store/: chroma.sqlite3
systemCore/engineMain/chroma_reflection_store/: chroma.sqlite3
systemCore/engineMain/reverseEngineeringAssets/: tts_test.py  tts_test_v2.py
systemCore/engineMain/reverseEngineeringAssets/backup/: engine.py
systemCore/engineMain/reverseEngineeringAssets/ggufOnDeviceFineTuningNonNvidiaExclusivePython/: Experiment0_Iteration0.ipynb
systemCore/engineMain/vector_store/: index.faiss  index.pkl
systemCore/engineMain/venv_test/: pyvenv.cfg
systemCore/mainEngineFrame_MacroController_EngineSharedResources/ChatterboxTTS_subengine/: LICENSE  pyproject.toml
(+648 files in other folders)
